removes pixel tracker from homepage

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -58,7 +58,6 @@
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
-<!-- SLACK test -->
 <!-- HeaderCode -->
 
 
@@ -182,7 +181,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <!-- <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"> </div> -->
   <a href="http://msudenver.edu/50/ourpeople/bill-nooning.shtml?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=50thpeoplehealthymove&utm_campaign=50thanniver">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
       <div class="carousel-caption Not Set">
@@ -192,7 +190,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
     </a>
 </div>
-  <!-- Version27.0 --><div class="item Not Set">
+<div class="item Not Set">
   <a href="https://www.msudenver.edu/newsroom/news/2016/february/15-cob-accreditation.shtml?utm_source=msudenverhome&utm_medium=carousel&utm_content=businessaccreditation&">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_business-accreditation.jpg" alt="MSU Denver&rsquo;s College of Business is among the five percent of business schools worldwide that have earned AACSB accreditation. " style="   " />
       <div class="carousel-caption caption-reverse">
@@ -202,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
     </a>
 </div>
-  <!-- Version16.0 --><div class="item Not Set">
+<div class="item Not Set">
   <a href="http://www.msudenver.edu/soiree/?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsummersoiree&utm_campaign=50thanniversary">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_50th-soiree.jpg" alt="A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate scholarships." style="   " />
       <div class="carousel-caption Not Set">
@@ -212,7 +210,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
     </a>
 </div>
-  <!-- Version8.0 --><div class="item Not Set">
+<div class="item Not Set">
   <a href="http://roadrunnersathletics.com/sports/2016/1/7/SpringSportsFestival.aspx?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsportsfestival&utm_c">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/SpringsSportsFestival04-25v2.jpg" alt="MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games." style="   " />
       <div class="carousel-caption caption-reverse">
@@ -412,10 +410,6 @@ Celebration of MSU Denver's <br>
 <!-- main.min.js --><t4 type="media" id="70445" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- FooterCode -->
-<!--Pixel Tracker from AdTaxi 9.11.15-05.31.16 -->
-<img height="1" width="1" style="border-style:none;" alt="" src="//insight.adsrvr.org/track/evnt/?adv=bz3kque&ct=0:z2e79knm&fmt=3"/>
-
-
     <script>
     $(function(){
     $(".dropdown").hover(
