remove telephone hyperlink for desktop

--- a/springhome_index_060816.html
+++ b/springhome_index_060816.html
@@ -436,7 +436,8 @@ Denver, CO 80204</span></p>
 
               <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
                <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204</a><br>
-               <a href="tel:303-556-5740"> 303-556-5740 </a><br>
+               <a class="desktoptel"> 303-556-5740 </a>
+               <a href="tel:303-556-5740" class="mobiletel"> 303-556-5740 </a><br>
                <a onclick="javascript:OpenLHNChat();return false;" href="#">Chat with Admissions (8 a.m.&ndash;5 p.m. MT, Weekdays)</a>
             </p>
         </div>
