--- a/springhome_index_060816.html
+++ b/springhome_index_060816.html
@@ -429,7 +429,7 @@ Denver, CO 80204</span></p>
                <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204</a><br>
                <a class="desktoptel"> 303-556-5740 </a>
                <a href="tel:303-556-5740" class="mobiletel"> 303-556-5740 </a><br>
-               <a onclick="javascript:OpenLHNChat();return false;" href="#"><img class="chat-icon" src="http://sr.photos2.fotosearch.com/bthumb/CSP/CSP993/k14325666.jpg"></img>Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a>
+               <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-wechat chat-icon"></span>Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a>
             </p>
         </div>
 
