--- a/springhome_index_060816.html
+++ b/springhome_index_060816.html
@@ -446,6 +446,14 @@ Denver, CO 80204</span></p>
 
 	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <p>
+
+              <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
+  <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
+              <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+              <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
+  <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
+              <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a><br>
+
                 <a href="/">&copy; Metropolitan State University of Denver</a><br>
                   <a href="/privacy">Privacy, Terms and Conditions</a> <br>
               		<a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
