updates 2 column to new header and fixes css output

--- a/2column.html
+++ b/2column.html
@@ -70,7 +70,7 @@
 
 <body>
   <a href="#content" class="sr-only">Skip to main content</a>
-  <div class="container-fluid">
+  <div class="container-fluid toolbar-background">
           <!-- QUICKLINKS TOOLBAR -->
           <div class="navbar navbar-static-top toolbar">
               <div class="navbar-header">
@@ -82,7 +82,9 @@
                   <!-- <img class="navbar-brand hidden-md hidden-lg img-responsive" src="<t4 type='media' id='105951' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
 
               </div>
-
+              <div class="toolbar-background">
+                  <div class="background"></div>
+                  <div class="container">
               <div class="navbar-collapse collapse">
 
                 <div class="col-xs-12 col-md-6 col-lg-6">
@@ -97,7 +99,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                      <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
+                      <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
             <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
@@ -111,17 +113,19 @@
           </form>
                    </div>
 
-                      <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
-                        <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook-square"></i></a>
-                        <a href="http://twitter.com/msudenver"><i class="fa fa-twitter-square"></i></a>
-                        <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
-                        <a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube-square"></i></a>
-                        <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
-                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>
-                      </section>
+                   <section class="col-xs-12 col-sm-8 col-md-6 col-lg-3 nav navbar-nav nav-social">
+                       <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                       <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                       <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
+                       <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a>
+                       <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
+                       <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                   </section>
               </div>
               <!--/.nav-collapse -->
           </div>
+        </div>
+      </div>
   </div>
 
 
@@ -129,7 +133,7 @@
 <div class="container">
     <div class="row">
       <!-- MSU DENVER LOGO -->
-        <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
+        <div class="col-sm-12 col-md-3 col-lg-3 msudenver_logo">
           <a href="/">
 <img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
 <!-- <img class="img-responsive center-block hidden-xs hidden-sm" src="<t4 type='media' id='91275' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
@@ -137,7 +141,7 @@
         </div>
         <!-- ENDS MSU DENVER LOGO -->
         <!-- SITE HEADER -->
-      <div class="col-lg-9 col-md-9 col-sm-12">
+      <div class="col-sm-12 col-md-9 col-lg-9">
       <div class="siteheader">
             <h1>Newsroom</h1>
             <h1><t4 type='navigation' id='101' /></h1>
@@ -157,7 +161,7 @@
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
     <div class="container" id="content">
         <div class="row">
-                <div class="col-lg-push-3 col-lg-9 col-md-9 col-md-push-3 col-sm-8 col-sm-push-4">
+                <div class="col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 col-lg-push-3 col-lg-9">
                    <div class="content row">
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
@@ -187,45 +191,6 @@
 <p>&ldquo;I just find myself driven to put out my best work, no matter what the project,&rdquo; Morrison said. &ldquo;I feel really humbled by it all, and I&rsquo;m really grateful to have been given such amazing opportunities.&rdquo;</p>
 <p>And she said she has Met Media to thank for that.</p>
 <p>&ldquo;I know that without working there, and working with such a talented group of people, I would not be in the position I am today,&rdquo; said Morrison. &ldquo;I&rsquo;d especially like to thank all the graphic designers I&rsquo;ve worked with throughout my time there. Every single one of them has been so beyond talented, and it pushes me to try and be better every day.&rdquo;</p>
-<div class="row">
-
-    <h3 class="pager col-lg-12 col-md-12 col-sm-12 col-xm-12">
-        <i class="fa fa-angle-left"></i>
-         Newer   -   <a href="/newsroom/news/2016/may/17-phishing-technology.shtml" title="17-phishing-technology" >Previous <i class="fa fa-angle-right"></i></a>
-    </h3>
-</div>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      var disqus_shortname = 'msudenver';
-      var disqus_identifier = '109745';
-    	var disqus_title = 'Decorated designer';
-      var disqus_category_id = '3183499';
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<div id="Copyright">
-    <p class="hidden">
-        <i>©Copyright 2013 by Metropolitan State University of Denver. All rights reserved.
-            <br>MSU Denver Office of Marketing and Communications, 303-556-2957</i>
-    </p>
-</div>
-<!-- AddThis Smart Layers BEGIN -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50bcee997bd3c4be"></script>
-<script type="text/javascript">
-  addthis.layers({
-    'theme' : 'transparent',
-    'share' : {
-      'position' : 'right',
-      'numPreferredServices' : 6
-    },
-  });
-</script>
-<!-- AddThis Smart Layers END -->
 
 
                         <!-- *********************************  -->
@@ -318,12 +283,12 @@
         <div class="row footer">
           <div class="container">
           <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
-                <p>
-                  <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
-                  <a href="/maps">Student Success Building, 890 Auraria Pkwy <br>
-                    Denver, CO 80204 </a> <br>
-                    <a href="/contact">Contact Us:</a> <a href="tel:303-556-5740"> 303-556-5740</a>
-                </p>
+            <p>
+              <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
+              <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204 </a> <br>
+              <a href="tel:303-556-5740"> 303-556-5740</a> <br>
+              <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Admissions (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
+            </p>
             </div>
 
     	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
