--- a/newsroom.html
+++ b/newsroom.html
@@ -107,7 +107,7 @@
             </div>
             <!-- ENDS MSU DENVER LOGO -->
             <!-- SITE HEADER -->
-            <div class="col-lg-9 col-md-9 col-sm-12">
+            <div class="col-sm-12 col-md-9 col-lg-9">
                 <div class="siteheader">
                     <h1>Newsroom</h1>
                 </div>
@@ -126,7 +126,7 @@
     <!-- ENDS BREADCRUMBS + SITEHEADER -->
     <div class="container" id="content">
         <div class="row">
-            <div class="col-lg-push-3 col-lg-9 col-md-9 col-md-push-3 col-sm-8 col-sm-push-4">
+            <div class="col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 col-lg-push-3 col-lg-9">
                 <div class="content row">
                     <!-- BEGINS HERO IMAGE -->
                     <t4 type="navigation" id="106" />
