--- a/2column.html
+++ b/2column.html
@@ -287,7 +287,7 @@
               <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
               <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204 </a> <br>
               <a href="tel:303-556-5740"> 303-556-5740</a> <br>
-              <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Admissions (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
+              <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
             </p>
             </div>
 
