--- a/springhome_index.html
+++ b/springhome_index.html
@@ -374,14 +374,12 @@ Celebration of MSU Denver's <br>
 <!-- BEGINS  FOOTER -->
 <div class="container-fluid footer">
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-9 campus-info">
-            <p>
-
-              <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
-               <a href="/">Student Success Building, 890 Auraria Pkwy <br>
-                 Denver, CO 80204
-                 </a><br>
-                <a href="/contact">Contact Us:</a> 303-556-5740
-            </p>
+        <p>
+          <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
+          <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204 </a> <br>
+          <a href="tel:303-556-5740"> 303-556-5740</a> <br>
+          <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
+        </p>
         </div>
 
 	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
