--- a/springhome_index_060816.html
+++ b/springhome_index_060816.html
@@ -423,14 +423,12 @@ Denver, CO 80204</span></p>
 <!-- BEGINS  FOOTER -->
 <div class="container-fluid footer">
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-9 campus-info">
-            <p>
-
-              <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
-               <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204</a><br>
-               <a class="desktoptel"> 303-556-5740 </a>
-               <a href="tel:303-556-5740" class="mobiletel"> 303-556-5740 </a><br>
-               <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon"></span>Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a>
-            </p>
+        <p>
+          <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
+          <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204 </a> <br>
+          <a href="tel:303-556-5740"> 303-556-5740</a> <br>
+          <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
+        </p>
         </div>
 
 <script type="text/javascript">
