replaces js to local path

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -468,11 +468,11 @@ Denver, CO 80204</span></p>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
 <!-- JS Files -->
 <!-- modernizr --><t4 type="media" id="70442" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<script type="text/javascript" src="/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- console.polyfill --><t4 type="media" id="70439" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<script type="text/javascript" src="/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <!-- main.min.js --><t4 type="media" id="70445" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
+<script type="text/javascript" src="/media/prod/js/main.min.js"></script>
 <!-- FooterCode -->
 
 
