--- a/1column.html
+++ b/1column.html
@@ -87,7 +87,7 @@
                   <div class="container">
               <div class="navbar-collapse collapse">
 
-                <div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
+                <div class="col-xs-12 col-md-6 col-lg-6">
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                     <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
@@ -98,7 +98,7 @@
                   </ul>
                 </div>
 
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                       <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -113,7 +113,7 @@
           </form>
                    </div>
 
-                   <section class="col-xs-12 col-sm-6 col-md-6 col-lg-3 nav navbar-nav nav-social">
+                   <section class="col-xs-12 col-sm-8 col-md-6 col-lg-3 nav navbar-nav nav-social">
                        <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
                        <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
                        <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
@@ -161,7 +161,7 @@
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
     <div class="container" id="content">
         <div class="row">
-                <div class="col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 col-lg-push-3 col-lg-9">
+                <div class="col-xs-12">
                    <div class="content row">
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
@@ -199,80 +199,6 @@
 
                     </div>
                 </div>
-                <div class="col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
-
-<!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
-<div class="sidebar-nav">
-    <div id="layout">
-        <!-- Menu toggle -->
-        <a href="#menu" id="menuLink" class="menu-link">
-            <!-- Hamburger icon -->
-            <span></span>
-        </a>
-        <div id="menu">
-            <div class="pure-menu pure-menu-open">
-     <t4 type="navigation" id="784"/>
-
-                <ul class="nav nav-list"><li><a href="/newsroom/">Home</a></li><li><span class="currentbranch0"><a href="/newsroom/news/">All News/Archive</a></span>
-<ul class="multilevel-linkul-0">
-<li><span class="currentbranch1"><a href="/newsroom/news/2016/">2016</a></span>
-<ul class="multilevel-linkul-1">
-<li><span class="currentbranch2"><a href="/newsroom/news/2016/may/">May</a></span></li>
-<li><a href="/newsroom/news/2016/april/">April</a></li>
-<li><a href="/newsroom/news/2016/march/">March</a></li>
-<li><a href="/newsroom/news/2016/february/">February</a></li>
-<li><a href="/newsroom/news/2016/january/">January</a></li>
-
-</ul>
-</li>
-<li><a href="/newsroom/news/2015/">2015</a></li>
-<li><a href="/newsroom/news/2014/">2014</a></li>
-<li><a href="/newsroom/news/2013/">2013</a></li>
-<li><a href="http://www.msudenver.edu/collcom/artman/publish/">2005 - 2012</a></li>
-<li><a href="http://www.msudenver.edu/collcom/@metro/previoius_issues.htm">2003 - 2005</a></li>
-
-</ul>
-</li><li><a href="/newsroom/topics/">Topics</a></li><li><a href="/newsroom/pressreleases/">Press Releases</a></li><li><a href="/newsroom/dailyclips/">Daily News Clips</a></li><li><a href="/experts/">Faculty Experts Guide</a></li><li><a href="/newsroomhttps://msudenver.edu/mediaresources/">Media Resources</a></li><li><a href="/speakersbureau/" target="_blank">Speakers Bureau</a></li><li><a href="/newsroom/studentpublications/">Student Publications</a></li><li><a href="/newsroom/contactus/">Contact Us</a></li></ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="linkcolumn">
-   <t4 type='navigation' id='104' />
-   <a role="button" class="btn btn-lg custombtn rowdyred col-xs-12" href="/brandcentral/shareyourstory/"  >
-<span  style="float:left;" ><span></span>SHARE YOUR STORY
-</span>
-</a><!-- linkcol -->
-<a role="button" class="btn btn-lg custombtn rowdyblue col-xs-12" href="/events/"  >
-<span  style="float:left;" ><span></span>EVENTS CALENDAR
-</span>
-</a><div class="well col-xs-12">
-<h4>Newsroom Search</h4>
-  <form action="//www.msudenver.edu/newsroom/search/" class="form-search">
-	<input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
-	<input type="hidden" name="cof" value="FORID:11" />
-	<input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" class="input-small"/>
-    <button type="submit" class="btn btn-default btn-small">Search</button>
-</form>
-</div><div class="row">
-<div class="col-xs-12">
-<div class="panel panel-default clickable" data-href="">
-  <div class="panel-heading">Media Contact:</div>
-    <div class="panel-body" style="height:100%">
-      <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
-<p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
-<p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
-    </div>
-  </div>
- </div>
-</div>
-</div>
-
-</div>
-
-<!-- ENDS LEFT SIDE (LINK COLUMN/SIDEMENU) -->
-
 
                 </div>
         </div>
@@ -308,14 +234,14 @@
     <!-- ENDS FOOTER -->
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
-<!-- JS Files -->
+<!-- sidemenu.js  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- sidemenu.js  --><t4 type="media" id="70446" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
-<!-- bootstrap.js --><t4 type="media" id="70438"/>
+<t4 type="media" id="70446" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+<!-- JS Files -->
 <!-- modernizr --><t4 type="media" id="70442" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- console.polyfill --><t4 type="media" id="70439" />
