updates homepage to new footer

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -372,30 +372,35 @@ Celebration of MSU Denver's <br>
 <!-- *********************************  -->
 
 <!-- BEGINS  FOOTER -->
-<div class="container-fluid footer">
-      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-9 campus-info">
-            <p>
+<div class="container-fluid">
+        <div class="row footer">
+          <div class="container">
+          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
+                <p>
+                  <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
+                  <a href="/maps">Student Success Building, 890 Auraria Pkwy Denver, CO 80204</a><br>
+                  <a href="tel:303-556-5740">303-556-5740</a><br>
+                  <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 am&ndash;5 pm MT, Monday&ndash;Friday)</a>
+                </p>
+            </div>
 
-              <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
-               <a href="/">Student Success Building, 890 Auraria Pkwy <br>
-                 Denver, CO 80204
-                 </a><br>
-                <a href="/contact">Contact Us:</a> 303-556-5740
-            </p>
+    	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <p>
+                 <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+                 <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+                 <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                 <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+                 <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
+                 <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
+                  <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
+                      <a href="/privacy">Privacy, Terms and Conditions</a> <br>
+                    <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank">College Portrait</a>
+                    <br>
+                </p>
+            </div>
+          </div>
         </div>
-
-	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <p>
-
-                 <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=754&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a>
-                <a href="/">Metropolitan State University of Denver</a><br>
-                  <a href="/privacy">Privacy, Terms and Conditions</a> <br>
-              		<a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
-                 </a>
-                <br>
-            </p>
-        </div>
-</div>
+    </div>
 <!-- ENDS FOOTER -->
 
 <!-- CDN JS Files -->
