--- a/springhome_index.html
+++ b/springhome_index.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
 
                   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                        <form class="custom-search-input" role="search" action="http://www.msudenver.edu/a_to_z/search">
+                        <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
                           <div class="input-group">
                             <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
 							<input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
