updates social media icons on header

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -108,11 +108,12 @@
                      </div>
 
                         <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
-                        <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a>
-						<a href="http://twitter.com/msudenver"><i class="fa fa-twitter"></i></a>
-                      	<a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
-						<a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube"></i></a>
-						<a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
+                        <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
+						<a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                      	<a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
+						<a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
+                        <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a>
                         </section>
 
                               <div class="col-xs-12  mainBlueNavigation">
