updates carousel stories

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -171,28 +171,37 @@
 <div id="carousel-homepage" class="carousel slide" data-ride="carousel">
 
 
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-  <a href="http://msudenver.edu/50/ourpeople/bill-nooning.shtml?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=50thpeoplehealthymove&utm_campaign=50thanniver">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
+  <div class="carousel-inner" role="listbox"><div class="item active">
+  <a href="/spotlight/diversity/">
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160627-diversity2.jpg" alt="MSU Denver, diversity, Insight into Diversity," style="   " />
       <div class="carousel-caption Not Set">
-      <h2>Healthy Outcome </h2>
-       <h3>Alumnus Bill Nooning, CEO of Provident Healthcare, built a network of care providers that puts patients first.</h3>
+      <h2>Diversity Champion</h2>
+       <h3>MSU Denver is honored for an unyielding commitment to diversity and inclusion.  </h3>
        <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
 	</div>
     </a>
 </div>
-<div class="item Not Set">
-  <a href="https://www.msudenver.edu/newsroom/news/2016/february/15-cob-accreditation.shtml?utm_source=msudenverhome&utm_medium=carousel&utm_content=businessaccreditation&">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_business-accreditation.jpg" alt="MSU Denver&rsquo;s College of Business is among the five percent of business schools worldwide that have earned AACSB accreditation. " style="   " />
+  <!-- Version7.0 --><div class="item Not Set">
+  <a href="/giving/waystogive/strategicinitiatives/aerospaceandengineeringsciences/">
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160627-AES.jpg" alt="Rendering of MSU Denver's new Aerospace Engineering Sciences Building. " style="   " />
+      <div class="carousel-caption Not Set">
+      <h2>Prepare for the Future</h2>
+       <h3>In 2017, MSU Denver STEM students can launch their careers from our new Aerospace and Engineering Sciences Building.</h3>
+       <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
+	</div>
+    </a>
+</div>
+  <!-- Version5.0 --><div class="item Not Set">
+  <a href="http://www.msudenver.edu/magazine/storyarchive/spring-2016/music-man.shtml?utm_source=uhomepage&utm_medium=carousel&utm_content=donbyron&utm_campaign=uhomepagelinks">
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160525_Byron.jpg" alt="Image of MSU Denver music professor Don Byron" style="   " />
       <div class="carousel-caption caption-reverse">
-      <h2>AACSB Accredited </h2>
-       <h3>MSU Denver’s College of Business is among the 5 percent of business schools worldwide that have earned AACSB accreditation.</h3>
+      <h2>Learn from a master</h2>
+       <h3>Jazz virtuoso Don Byron brings excellence to the bandstand and the classroom.</h3>
        <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
 	</div>
     </a>
 </div>
-<div class="item Not Set">
+  <!-- Version3.0 --><div class="item Not Set">
   <a href="http://www.msudenver.edu/soiree/?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsummersoiree&utm_campaign=50thanniversary">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_50th-soiree.jpg" alt="A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate scholarships." style="   " />
       <div class="carousel-caption Not Set">
@@ -202,17 +211,17 @@
 	</div>
     </a>
 </div>
-<div class="item Not Set">
+  <!-- Version1.0 --><div class="item Not Set">
   <a href="http://roadrunnersathletics.com/sports/2016/1/7/SpringSportsFestival.aspx?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsportsfestival&utm_c">
-  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/SpringsSportsFestival04-25v2.jpg" alt="MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games." style="   " />
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/SpringsSportsFestival04-25v2-28.jpg" alt="Spring Sports Festival Update" style="   " />
       <div class="carousel-caption caption-reverse">
       <h2>Share the Experience</h2>
-       <h3>MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games.</h3>
+       <h3>MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games. </h3>
        <div class="caption-readmore"><hr>Read More <i class="fa fa-angle-right"></i></div>
 	</div>
     </a>
 </div>
-  <!-- Version28.0 --></div>
+  <!-- Version1.0 --></div>
 
 <!-- Controls -->
   <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
