updates sample news

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -278,76 +278,76 @@ Celebration of MSU Denver's <br>
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="news">
     	<div class="row news-home-item">
-  <a href="/newsroom/news/2016/april/28-remi-arata-student.shtml">
+  <a href="/newsroom/news/2016/june/30-national-anthem.shtml">
 <div class="col-xs-12 col-sm-1">
-<p class="news-home-month">Apr</p>
-<p class="news-home-day">28</p>
+<p class="news-home-month">Jun</p>
+<p class="news-home-day">30</p>
 </div>
 
 <div class="col-xs-12 col-sm-11">
 
-<p class="news-home-headline">Climbing the walls &hellip; and the rocks</p>
-<p class="news-home-intro">Sophomore Remi Arata approaches computer science &mdash; and competitive climbing &mdash; like a puzzle to be solved.</p>
+<p class="news-home-headline">Time to celebrate</p>
+<p class="news-home-intro">Gina Bauza, military veteran and MSU Denver alumna, sings us into the holiday weekend with the national anthem.</p>
 
 </div>
     </a>
 </div>
 <hr><div class="row news-home-item">
-  <a href="/newsroom/news/2016/april/28-kudos.shtml">
+  <a href="/newsroom/news/2016/june/30-kudos.shtml">
 <div class="col-xs-12 col-sm-1">
-<p class="news-home-month">Apr</p>
-<p class="news-home-day">28</p>
+<p class="news-home-month">Jun</p>
+<p class="news-home-day">30</p>
 </div>
 
 <div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">Kudos</p>
-<p class="news-home-intro">This week, we give a shout out to the departments of communication arts and sciences, management and social work.</p>
+<p class="news-home-intro">Two awards and papers in the College of Business are our kudos for the week.</p>
 
 </div>
     </a>
 </div>
 <hr><div class="row news-home-item">
-  <a href="/newsroom/news/2016/april/27-luis-torres-profile.shtml">
+  <a href="/newsroom/news/2016/june/29-dara-dotz.shtml">
 <div class="col-xs-12 col-sm-1">
-<p class="news-home-month">Apr</p>
-<p class="news-home-day">27</p>
+<p class="news-home-month">Jun</p>
+<p class="news-home-day">29</p>
 </div>
 
 <div class="col-xs-12 col-sm-11">
 
-<p class="news-home-headline">'An outspoken conscience that has moved us forward'</p>
-<p class="news-home-intro">Dr. Luis Torres&rsquo; life and career are distinguished by his tireless advocacy for underrepresented students.</p>
+<p class="news-home-headline">Change maker </p>
+<p class="news-home-intro">This White House Champion of Change found a second chance and her passion at MSU Denver.</p>
 
 </div>
     </a>
 </div>
 <hr><div class="row news-home-item">
-  <a href="/newsroom/news/2016/april/26-greenway-clean-up-project.shtml">
+  <a href="/newsroom/news/2016/june/29-election-results.shtml">
 <div class="col-xs-12 col-sm-1">
-<p class="news-home-month">Apr</p>
-<p class="news-home-day">26</p>
+<p class="news-home-month">Jun</p>
+<p class="news-home-day">29</p>
 </div>
 
 <div class="col-xs-12 col-sm-11">
 
-<p class="news-home-headline">Innovative ways to take out the trash</p>
-<p class="news-home-intro">Industrial design and engineering students to test their trash removal inventions in Cherry Creek.</p>
+<p class="news-home-headline">Election results</p>
+<p class="news-home-intro">Two new staff leadership teams to serve in the 2016-17 academic year.</p>
 
 </div>
     </a>
 </div>
 <hr><div class="row news-home-item">
-  <a href="/newsroom/news/2016/april/26-teacher-education-ranking.shtml">
+  <a href="/newsroom/news/2016/june/28-julian-garcia.shtml">
 <div class="col-xs-12 col-sm-1">
-<p class="news-home-month">Apr</p>
-<p class="news-home-day">26</p>
+<p class="news-home-month">Jun</p>
+<p class="news-home-day">28</p>
 </div>
 
 <div class="col-xs-12 col-sm-11">
 
-<p class="news-home-headline">MSU Denver ranks No. 1 for educating teachers</p>
-<p class="news-home-intro"> Website says we&rsquo;re best in Colorado for preparing tomorrow&rsquo;s educators.</p>
+<p class="news-home-headline">Making his pitch</p>
+<p class="news-home-intro">This holiday weekend, Julian Garcia will get to work. The recently drafted Roadrunner pitcher takes major-league aspirations into his minor league start. </p>
 
 </div>
     </a>
@@ -359,7 +359,6 @@ Celebration of MSU Denver's <br>
 
 
            <div class="calendar">
-
 
 </div>
       <h4><a href="/events">SEE ALL EVENTS <i class="fa fa-angle-right"></i></a><h4>
