updates links in blue nav

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -129,17 +129,17 @@
                            <ul class="nav navbar-nav navbar-center hidden-xs">
                               <li class="dropdown">
                                   <a href="/about">ABOUT <b class="caret"></b></a>
-                                  <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/50/">50th Anniversary</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
+                                  <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
                               </li>
 
                               <li class="dropdown">
                                 <a href="/academics">ACADEMICS <b class="caret"></b></a>
-                                  <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a_to_z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
+                                  <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
                               </li>
 
                               <li class="dropdown">
                         			<a href="/admissions">ADMISSIONS <b class="caret"></b></a>
-                        		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/summeronly/">Summer Only</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
+                        		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
                     		</li>
                               <li class="msudenver_logo hidden-sm">
               					<img src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_white_transparent.png" alt="MSU Denver 50th Anniversary Logo">
@@ -371,8 +371,10 @@ Celebration of MSU Denver's <br>
 <!-- SITEMANAGER START FOOTER -->
 <!-- *********************************  -->
 
+
+<!-- Footer NAV ID -->
 <!-- BEGINS  FOOTER -->
-<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row footer">
           <div class="container">
           <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
@@ -401,7 +403,7 @@ Celebration of MSU Denver's <br>
           </div>
         </div>
     </div>
-<!-- ENDS FOOTER -->
+    <!-- ENDS FOOTER -->
 
 <!-- CDN JS Files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
