--- a/springhome_index.html
+++ b/springhome_index.html
@@ -129,7 +129,10 @@
      					  </ul>
 
                            <ul class="nav navbar-nav navbar-center hidden-xs">
-                              <li class="dropdown">
+                              <li class="msudenver_logo hidden-sm">
+              					<img src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
+		      				  </li>
+                             <li class="dropdown">
                                   <a href="/about">ABOUT <b class="caret"></b></a>
                                   <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
                               </li>
@@ -143,9 +146,6 @@
                         			<a href="/admissions">ADMISSIONS <b class="caret"></b></a>
                         		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
                     		</li>
-                              <li class="msudenver_logo hidden-sm">
-              					<img src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_white_transparent.png" alt="MSU Denver 50th Anniversary Logo">
-		      				  </li>
                             <li class="dropdown">
                                 <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
                                 <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
