--- a/2column.html
+++ b/2column.html
@@ -70,7 +70,7 @@
 
 <body>
   <a href="#content" class="sr-only">Skip to main content</a>
-  <div class="container-fluid">
+  <div class="container-fluid toolbar-background">
           <!-- QUICKLINKS TOOLBAR -->
           <div class="navbar navbar-static-top toolbar">
               <div class="navbar-header">
@@ -82,10 +82,12 @@
                   <!-- <img class="navbar-brand hidden-md hidden-lg img-responsive" src="<t4 type='media' id='105951' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
 
               </div>
-
+              <div class="toolbar-background">
+                  <div class="background"></div>
+                  <div class="container">
               <div class="navbar-collapse collapse">
 
-                <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                     <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
@@ -96,8 +98,8 @@
                   </ul>
                 </div>
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                      <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                      <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
             <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
@@ -111,18 +113,21 @@
           </form>
                    </div>
 
-                      <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
-                        <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook-square"></i></a>
-                        <a href="http://twitter.com/msudenver"><i class="fa fa-twitter-square"></i></a>
-                        <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
-                        <a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube-square"></i></a>
-                        <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
-                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>
-                      </section>
+                     <section class="col-xs-12 col-sm-6 col-md-6 col-lg-3 nav navbar-nav nav-social">
+                       <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                       <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                       <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
+                       <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a>
+                       <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
+                       <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                   </section>
               </div>
               <!--/.nav-collapse -->
           </div>
+        </div>
+      </div>
   </div>
+
 
 
 <!-- BEGINS BREADCRUMBS + SITEHEADER -->
